# DreamscapeEngine

./: .gitignore  CMakeLists.txt  README.txt  address_sanitize.bat  address_sanitize.sh  debug.bat  debug.sh  test.sh  thread_sanitize.sh  undefined_behaviour_sanitize.sh
include/: CMakeLists.txt  asset_public.h  bit_vector.h  cmd.h  collision.h  csg.h  ds_allocator.h  ds_asset.h  ds_atomic.h  ds_base.h  ds_define.h  ds_font.h  ds_gl.h  ds_graphics.h  ds_hash_map.h  ds_job.h  ds_led.h  ds_math.h  ds_platform.h  ds_random.h  ds_renderer.h  ds_semaphore.h  ds_serialize.h  ds_string.h  ds_thread.h  ds_types.h  ds_ui.h  ds_vector.h  dynamics.h  fifo_spmc.h  float32.h  geometry.h  hash_map.h  hierarchy_index.h  led_public.h  list.h  matrix.h  quaternion.h  queue.h  r_public.h  (+6 more)
lib/: CMakeLists.txt
lib/dtoa/: dtoa.c  dtoa.h
lib/opengl/: CMakeLists.txt
notes/: .PGS_NGS.txt.swp  .sequential_impulse.txt.swp  PGS_NGS.txt  block_solver.txt  local_frame_contacts.txt  sequential_impulse.txt
src/asset_system/: CMakeLists.txt  asset_database.c  asset_font.c  asset_init.c  asset_local.h  asset_public.h  asset_ssff.c
src/base/: CMakeLists.txt  ds_allocator.c  ds_arch.c  ds_error.c  ds_log.c  ds_semaphore.c  ds_serialize.c  ds_string.c  ds_thread.c
src/containers/: CMakeLists.txt  bit_vector.c  ds_hash_map.c  ds_vector.c  hash_map.c  hierarchy_index.c  list.c  queue.c  string_database.c  tree.c
src/containers/parallel/: fifo_spmc.c
src/led/: CMakeLists.txt  csg.c  csg.h  led_core.c  led_init.c  led_local.h  led_main.c  led_public.h  led_ui.c  led_utility.c  led_visual.c
src/math/: CMakeLists.txt
src/math/collision/: CMakeLists.txt  bvh.c  collision.c  collision.h
src/math/common/: CMakeLists.txt  ds_random.c  float32.c  geometry.c  matrix.c  quaternion.c  transform.c  vector.c
src/math/dynamics/: CMakeLists.txt  contact_database.c  contact_solver.c  ds_body.c  ds_shape.c  dynamics.h  island.c  physics_pipeline.c
src/misc/: .CMakeLists.txt.swp  CMakeLists.txt  cmd.c  ds_font.c
src/misc/debug/: allocator_debug.c  allocator_debug.h
src/misc/ui/: ui_build.c  ui_core.c  ui_local.h  ui_public.h
src/renderer/: CMakeLists.txt  r_camera.c  r_gl.c  r_init.c  r_local.h  r_main.c  r_mesh.c  r_proxy3d.c  r_public.h  r_scene.c  r_ui.c
src/sys/: CMakeLists.txt  ds_graphics.c  ds_job.c  sys_common.h  sys_event.c  sys_filesystem.c  sys_graphics.c  sys_init.c  sys_input.c  sys_local.h  sys_public.h  task.c
src/sys/linux/: linux_filesystem.c  linux_random.c  main.c
src/sys/sdl3_wrapper/: CMakeLists.txt  sdl3_wrapper_event.c  sdl3_wrapper_gl.c  sdl3_wrapper_input.c  sdl3_wrapper_local.h  sdl3_wrapper_public.h  sdl3_wrapper_window.c
src/sys/wasm/: main.c
src/sys/windows/: WinMain.c  win_filesystem.c  win_random.c
test/: CMakeLists.txt  ds_test.h  test_allocator.c  test_container.c  test_hash.c  test_hash_map.c  test_main.c  test_math.c  test_repetition.c  test_rng.c  test_serialize.c  test_string.c
test/correctness/linux/: main.c
test/correctness/wasm/: main.c
test/correctness/windows/: WinMain.c
test/dynamics/linux/: main.c
test/dynamics/windows/: WinMain.c
test/performance/linux/: main.c
